added input functionality

--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   <script src="./script.js" defer></script>
 </head>
 <body>
-  <form class="dimensions--form">
-    <input type="number" class="width--input" placeholder="Enter width">
-    <input type="number" class="height--input" placeholder="Enter height">
-  </form>
-  <button class="start--button">Start</button>
+  <button class="start--button">Enter Dimensions</button>
   <button class="reset--button">Reset</button>
   <div class="container"></div>
 </body>
